--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # The Site Configuration
-
+noindex: true
 # Import the theme
 theme: jekyll-theme-chirpy
 
@@ -9,40 +9,31 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: Asia/Kolkata
+
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Data Key Hub
+tagline: Practical Data Science, ML & Analytics
+description: >
+  Practical blogs on data science, machine learning, forecasting,
+  and analytics with real-world intuition.
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
-
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: https://datakeyhub.github.io
 
 github:
-  username: github_username # change to your GitHub username
-
-twitter:
-  username: twitter_username # change to your Twitter username
+  username: datakeyhub
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Keyur
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/datakeyhub
+# - https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
