--- a/_config.yml
+++ b/_config.yml
@@ -164,6 +164,11 @@ collections:
 
 defaults:
   - scope:
+      path: ""
+    values:
+      robots: noindex, nofollow
+    
+  - scope:
       path: "" # An empty string here means all files in the project
       type: posts
     values:
